--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,10 @@
 	vertical-align 			:baseline;
 }
 
+a{
+	text-decoration: none;
+}
+
 html{
 	width 					: 100%;
 	height 					: 100%;
@@ -66,8 +70,7 @@ footer{
 		color 				: #181818;
 	}
 
-	.menu-item a{
-		text-decoration 	: none;
+	.menu-item a{		
 		color 				: inherit;
 		display 			: block;
 	}
